Ready cloud-build

--- a/.env
+++ b/.env
@@ -18,3 +18,5 @@ STRIPE_ENDPOINT_SECRET=whsec_Fg1HrIfgk3Hdebo558BAKcSpIia3Tr7e
 DATABASE_URL_AUTH_MS=mongodb+srv://root-user:0m3xtoPtKNRi2Op0@auth-ms.a9trdbr.mongodb.net/AuthDB
 
 JWT_SECRET=EstoDebeserUnstringSeguro
+
+ORDERS_DATABASE_URL=postgresql://orders-db_owner:ajgCHm9rRTi2@ep-tiny-queen-a2lnwhp2.eu-central-1.aws.neon.tech/orders-db?sslmode=require
